Added database and hibernate, major project refactor